--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "transpile": "babel core --out-dir build",
+    "transpile": "babel core --out-dir build && babel protocol --out-dir build",
     "test": "npm run transpile && node_modules/.bin/nyc ava"
   },
   "repository": {
@@ -33,7 +33,9 @@
     "url": "https://github.com/quart-company/jow/issues"
   },
   "homepage": "https://github.com/quart-company/jow#readme",
-  "dependencies": {},
+  "dependencies": {
+    "text-encoding": "^0.6.4"
+  },
   "devDependencies": {
     "ava": "^0.24.0",
     "babel-cli": "^6.26.0",
