--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "devDependencies": {
     "ava": "^0.24.0",
     "babel-cli": "^6.26.0",
-    "nyc": "^11.4.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0"
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "chuhai": "^1.2.0",
+    "nyc": "^11.4.1"
   }
 }
